# email-insight-kit

./: .gitignore  LEEME.txt  LICENSE  README.md  pyproject.toml
docs/: index.html
src/email_insight_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/inboxkit/: __init__.py  analyze.py  cli.py  drafts.py  models.py  outlook_source.py  report.py
tests/: test_drafts.py  test_inboxkit.py
